--- a/arch/arm/configs/chroma_defconfig
+++ b/arch/arm/configs/chroma_defconfig
@@ -3670,3 +3670,11 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_MSM_LIMITER=y
+CONFIG_BRICKED_HOTPLUG=y
+CONFIG_F2FS_FS=y
+# CONFIG_F2FS_STAT_FS is not set
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+CONFIG_STATE_NOTIFIER=y
