--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -3064,6 +3064,7 @@ config MSM_SECBOOT
 	bool "MSM Secboot verification driver"
 	help
 	Driver to expose secureboot status
+endif
 
 config MSM_LIMITER
 	bool "MSM Frequency Limiter Driver"
