--- a/init/Kconfig
+++ b/init/Kconfig
@@ -947,6 +947,12 @@ config CC_OPTIMIZE_FOR_SIZE
 
 	  If unsure, say Y.
 
+config CC_OPTIMIZE_DEFAULT
+	bool "Use -O2"
+
+config CC_OPTIMIZE_MORE
+	bool "Use -O3"
+
 config SYSCTL
 	bool
 
