--- a/arch/arm/configs/chroma_defconfig
+++ b/arch/arm/configs/chroma_defconfig
@@ -3656,3 +3656,10 @@ CONFIG_NLATTR=y
 # CONFIG_CORDIC is not set
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+
+##
+# cKernel Setup
+##
+
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
+
