--- a/arch/arm/configs/chroma_defconfig
+++ b/arch/arm/configs/chroma_defconfig
@@ -3678,3 +3678,6 @@ CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
 CONFIG_STATE_NOTIFIER=y
+# CONFIG_RD_LZ4 is not set
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
